--- a/assets/single.html
+++ b/assets/single.html
@@ -30,117 +30,124 @@
 
 <body>
     <!-- header -->
-<div class="background">
-    <header class="header">
-        <div class="header_container">
-            <div class="header__body">
-                <a class="header__logo" href="">
-                    <div>Odessa</div>
-                </a>
-                <div class="header__burger">
-                    <span></span>
+    <div class="background">
+        <header class="header">
+            <div class="header_container">
+                <div class="header__body">
+                    <a class="header__logo" href="">
+                        <div>Odessa</div>
+                    </a>
+                    <div class="header__burger">
+                        <span></span>
+                    </div>
+                    <nav class="header__menu">
+                        <ul class="header__list">
+                            <li>
+                                <a class="header__link" href="">Home</a>
+                            </li>
+                            <li>
+                                <a class="header__link" href="">Categories<span class="dropdown-arrow">▼</span></a>
+                                <ul>
+                                    <li><a href="">пляжі</a></li>
+                                    <li><a href="">парки</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a class="header__link" href="">About us</a>
+                            </li>
+                            <li>
+                                <a class="header__link" href="">contscts</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav class="header__menu">
-                    <ul class="header__list">
-                        <li>
-                            <a class="header__link" href="">Home</a>
-                        </li>
-                        <li>
-                            <a class="header__link" href="">Categories<span class="dropdown-arrow">▼</span></a>
-                            <ul>
-                                <li><a href="">пляжі</a></li>
-                                <li><a href="">парки</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a class="header__link" href="">About us</a>
-                        </li>
-                        <li>
-                            <a class="header__link" href="">contscts</a>
-                        </li>
-                    </ul>
-                </nav>
             </div>
-        </div>
-    </header>
-    <section>
-    <div class="container">
-        <div class="single__wrapper">
-            <div class="content">
-                <div class="content__image">
-                    <img src="../../../img/image_1.jpg" alt="">
-                    <h2 class="content__head image__head">The 10 most beautiful places you should visit in your life
-                    </h2>
-                    <div class="content_author">
-                        <img src="../../../img/autor_1.png" alt="">
-                        <div>
-                            <div class="content_author__name author__text">Luke Cage</div>
-                            <div class="content_author__date author__text">11.02.2022</div>
+        </header>
+        <section>
+            <div class="container">
+                <div class="single__wrapper">
+                    <div class="content">
+                        <div class="content__image">
+                            <img src="../../../img/image_1.jpg" alt="">
+                            <h2 class="content__head image__head">The 10 most beautiful places you should visit in your
+                                life
+                            </h2>
+                            <div class="content_author">
+                                <img src="../../../img/autor_1.png" alt="">
+                                <div>
+                                    <div class="content_author__name author__text">Luke Cage</div>
+                                    <div class="content_author__date author__text">11.02.2022</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content__text text">
+                            <div>Vestibulum ut placerat nisl. Cras sed purus tellus. Pellentesque
+                                habitant
+                                morbi
+                                tristique senectus et netus et malesuada fames ac turpis egestas. Duis posuere nisi sit
+                                amet
+                                neque
+                                finibus
+                                vestibulum. Vivamus at leo ut turpis posuere molestie. Nullam at turpis nec metus
+                                pharetra
+                                bibendum.
+                                Vivamus
+                                id urna et leo blandit consequat Vestibulum ut placerat nisl. Cras sed purus tellus.
+                                Pellentesque
+                                habitant
+                                morbi
+                                tristique senectus et netus et malesuada fames ac turpis egestas. Duis posuere nisi sit
+                                amet
+                                neque
+                                finibus
+                                vestibulum. Vivamus at leo ut turpis posuere molestie. Nullam at turpis nec metus
+                                pharetra
+                                bibendum.
+                                Vivamus
+                                id urna et leo blandit consequat Vestibulum ut placerat nisl. Cras sed purus tellus.
+                                Pellentesque
+                                habitant
+                                morbi
+                                tristique senectus et netus et malesuada fames ac turpis egestas. Duis posuere nisi sit
+                                amet
+                                neque
+                                finibus
+                                vestibulum. Vivamus at leo ut turpis posuere molestie. Nullam at turpis nec metus
+                                pharetra
+                                bibendum.
+                                Vivamus
+                                id urna et leo blandit consequat</div>
                         </div>
                     </div>
                 </div>
-                <div class="content__text text">
-                    <div>Vestibulum ut placerat nisl. Cras sed purus tellus. Pellentesque
-                        habitant
-                        morbi
-                        tristique senectus et netus et malesuada fames ac turpis egestas. Duis posuere nisi sit amet
-                        neque
-                        finibus
-                        vestibulum. Vivamus at leo ut turpis posuere molestie. Nullam at turpis nec metus pharetra
-                        bibendum.
-                        Vivamus
-                        id urna et leo blandit consequat Vestibulum ut placerat nisl. Cras sed purus tellus.
-                        Pellentesque
-                        habitant
-                        morbi
-                        tristique senectus et netus et malesuada fames ac turpis egestas. Duis posuere nisi sit amet
-                        neque
-                        finibus
-                        vestibulum. Vivamus at leo ut turpis posuere molestie. Nullam at turpis nec metus pharetra
-                        bibendum.
-                        Vivamus
-                        id urna et leo blandit consequat Vestibulum ut placerat nisl. Cras sed purus tellus.
-                        Pellentesque
-                        habitant
-                        morbi
-                        tristique senectus et netus et malesuada fames ac turpis egestas. Duis posuere nisi sit amet
-                        neque
-                        finibus
-                        vestibulum. Vivamus at leo ut turpis posuere molestie. Nullam at turpis nec metus pharetra
-                        bibendum.
-                        Vivamus
-                        id urna et leo blandit consequat</div>
+            </div>
+        </section>
+        <div class="container">
+            <div class="carousel_block">
+                <div class="carousel">
+                    <div class="carousel__item">
+                        <img class="carousel__img" src="../../../img/IMAGE (5).jpg" alt="">
+                    </div>
+                    <div class="carousel__item">
+                        <img class="carousel__img" src="../../../img/IMAGE (6).jpg" alt="">
+                    </div>
+                    <div class="carousel__item">
+                        <img class="carousel__img" src="../../../img/IMAGE (5).jpg" alt="">
+                    </div>
+                    <div class="carousel__item">
+                        <img class="carousel__img" src="../../../img/IMAGE (6).jpg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-    <div class="container">
-    <div class="carousel_block">
-        <div class="carousel">
-            <div class="carousel__item">
-                <img class="carousel__img" src="../../../img/IMAGE (5).jpg" alt="">
+        <footer>
+            <div class="footer_content">
+                <div>Copyright © Ruslan Toloshnyi, 2023</div>
+                <div>ruslantoloshnyi@gmail.com</div>
             </div>
-            <div class="carousel__item">
-                <img class="carousel__img" src="../../../img/IMAGE (6).jpg" alt="">
-            </div>
-            <div class="carousel__item">
-                <img class="carousel__img" src="../../../img/IMAGE (5).jpg" alt="">
-            </div>
-            <div class="carousel__item">
-                <img class="carousel__img" src="../../../img/IMAGE (6).jpg" alt="">
-            </div>
-        </div>
-    </div>
-</div>
-    <footer>
-    <div class="footer_content">
-        <div>Copyright © Ruslan Toloshnyi, 2023</div>
-        <div>ruslantoloshnyi@gmail.com</div>
-    </div>
-</footer>
-    <script src="js/vendor.min.js"></script>
-    <script src="js/main.min.js"></script>
+        </footer>
+        <script src="js/vendor.min.js"></script>
+        <script src="js/main.min.js"></script>
 </body>
 
 </html>
