change css and front-page

--- a/assets/index.html
+++ b/assets/index.html
@@ -26,6 +26,18 @@
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
     <link rel="apple-touch-icon" sizes="1024x1024" href="img/favicons/apple-touch-icon-1024x1024.png">
     <link rel="stylesheet" href="styles/main.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap" rel="stylesheet">
+
+
+
+
+
+
 </head>
 
 <body>
@@ -35,7 +47,7 @@
         <div class="header_container">
             <div class="header__body">
                 <a class="header__logo" href="">
-                    <div>Odessa</div>
+                    <div>Odessa chill</div>
                 </a>
                 <div class="header__burger">
                     <span></span>
@@ -46,14 +58,20 @@
                             <a class="header__link" href="">Home</a>
                         </li>
                         <li>
-                            <a class="header__link" href="">Categories<span class="dropdown-arrow">▼</span></a>
+                            <a class="header__link" href="#">Categories</a>
                             <ul>
+                                <li><a href="">Всі</a></li>
                                 <li><a href="">пляжі</a></li>
-                                <li><a href="">парки</a></li>
+                                <li><a href="">паркиgfhr</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a class="header__link" href="">About us</a>
+                            <a class="header__link" href="#">Popular resort</a>
+                            <ul>
+                                <li><a href="">Всі</a></li>
+                                <li><a href="">пляжі</a></li>
+                                <li><a href="">паркиgfhr</a></li>
+                            </ul>
                         </li>
                         <li>
                             <a class="header__link" href="">contscts</a>
@@ -64,12 +82,48 @@
         </div>
     </header>
     <section>
+    <a class="header__link" href="#">
+        <div>
+            <h1 class="header__heading">Популярні місця Одеси</h1>
+        </div>
+    </a>
     <div class="container">
         <div class="content__background">
             <div class="wrapper">
                 <div class="content">
                     <div class="content__image">
-                        <img src="../../../img/image_1.jpg" alt="">
+                        <a href=""><img src="../../../img/image_1.jpg" alt=""></a>
+                        <h2 class="content__head image__head">The 10 most beautiful places you should visit
+                            in your life
+                        </h2>
+                        <div class="content_author">
+                            <img src="../../../img/autor_1.png" alt="">
+                            <div>
+                                <div class="content_author__name author__text">Luke Cage</div>
+                                <div class="content_author__date author__text">11.02.2022</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content__text text">
+                        <div>Vestibulum ut placerat nisl. Cras sed purus tellus. Pellentesque
+                            habitant
+                            morbi
+                            tristique senectus et netus et malesuada fames ac turpis egestas. Duis posuere nisi sit amet
+                            neque
+                            finibus
+                            vestibulum. Vivamus at leo ut turpis posuere molestie. Nullam at turpis nec metus pharetra
+                            bibendum.
+                            Vivamus
+                            id urna et leo blandit consequat...</div>
+                        <div class="content__link text"><a href="">Читати більше &#8594;</a></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="wrapper">
+                <div class="content">
+                    <div class="content__image">
+                        <a href=""><img src="../../../img/image_1.jpg" alt=""></a>
                         <h2 class="content__head image__head">The 10 most beautiful places you should visit in your life
                         </h2>
                         <div class="content_author">
@@ -98,7 +152,7 @@
             <div class="wrapper">
                 <div class="content">
                     <div class="content__image">
-                        <img src="../../../img/image_1.jpg" alt="">
+                        <a href=""><img src="../../../img/image_1.jpg" alt=""></a>
                         <h2 class="content__head image__head">The 10 most beautiful places you should visit in your life
                         </h2>
                         <div class="content_author">
@@ -123,34 +177,12 @@
                     </div>
                 </div>
             </div>
-
-            <div class="wrapper">
-                <div class="content">
-                    <div class="content__image">
-                        <img src="../../../img/image_1.jpg" alt="">
-                        <h2 class="content__head image__head">The 10 most beautiful places you should visit in your life
-                        </h2>
-                        <div class="content_author">
-                            <img src="../../../img/autor_1.png" alt="">
-                            <div>
-                                <div class="content_author__name author__text">Luke Cage</div>
-                                <div class="content_author__date author__text">11.02.2022</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="content__text text">
-                        <div>Vestibulum ut placerat nisl. Cras sed purus tellus. Pellentesque
-                            habitant
-                            morbi
-                            tristique senectus et netus et malesuada fames ac turpis egestas. Duis posuere nisi sit amet
-                            neque
-                            finibus
-                            vestibulum. Vivamus at leo ut turpis posuere molestie. Nullam at turpis nec metus pharetra
-                            bibendum.
-                            Vivamus
-                            id urna et leo blandit consequat...</div>
-                    </div>
-                </div>
+            <div class="pagination">
+                <span>1</span>
+                <a href="">2</a>
+                <a href="">3</a>
+                <a href="">4</a>
+                <a href="">></a>
             </div>
         </div>
     </div>
@@ -173,7 +205,23 @@
             <div class="stories_content">
                 <div class="stories_content_block">
                     <div class="stories_content_block__image">
-                        <img src="../../../img/image_1.jpg" alt="">
+                        <a href=""><img src="../../../img/image_1.jpg" alt=""></a>
+                        <div class="stories_content_block_author">
+                            <img src="../../../img/autor_1.png" alt="">
+                            <div>
+                                <div class="stories_content_block_author__name author__text">Luke Cage</div>
+                                <div class="stories_content_block_author__date author__text">Oct 11, 2016</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="stories_content_block__title text"><a href="">The 10 most beautiful places you should
+                            visit in your
+                            life</a>
+                    </div>
+                </div>
+                <div class="stories_content_block">
+                    <div class="stories_content_block__image">
+                        <a href=""><img src="../../../img/image_1.jpg" alt=""></a>
                         <div class="stories_content_block_author">
                             <img src="../../../img/autor_1.png" alt="">
                             <div>
@@ -188,22 +236,7 @@
                 </div>
                 <div class="stories_content_block">
                     <div class="stories_content_block__image">
-                        <img src="../../../img/image_1.jpg" alt="">
-                        <div class="stories_content_block_author">
-                            <img src="../../../img/autor_1.png" alt="">
-                            <div>
-                                <div class="stories_content_block_author__name author__text">Luke Cage</div>
-                                <div class="stories_content_block_author__date author__text">Oct 11, 2016</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="stories_content_block__title text">The 10 most beautiful places you should visit in your
-                        life
-                    </div>
-                </div>
-                <div class="stories_content_block">
-                    <div class="stories_content_block__image">
-                        <img src="../../../img/image_1.jpg" alt="">
+                        <a href=""><img src="../../../img/image_1.jpg" alt=""></a>
                         <div class="stories_content_block_author">
                             <img src="../../../img/autor_1.png" alt="">
                             <div>
