--- a/assets/resort.html
+++ b/assets/resort.html
@@ -93,7 +93,16 @@
             <div class="content">
                 <div class="content__image">
                     <img src="../../../img/image_1.jpg" alt="">
+                    <h2 class="content__head image__head"></h2>
+                    <div class="content_author">
+
+                        <div>
+                            <div class="content_author__name author__text"></div>
+                            <div class="content_author__date author__text"></div>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="content__text text">
                     <div>Vestibulum ut placerat nisl. Cras sed purus tellus. Pellentesque
                         habitant
@@ -157,6 +166,30 @@
         </div>
     </div>
 </div>
+    <section>
+    <div class="container">
+        <div class="social-share">
+            <div class="social-share__head text">
+                <h3>Поділитися</h3>
+            </div>
+            <div class="social-share__link">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://odessachill.online" target="_blank"><img
+                        src=" ../../../img/icons8-логотип-facebook-50.png" alt=""></a>
+                <span class="tooltip">Поділитись у Facebook</span>
+            </div>
+            <div class="social-share__link">
+                <a href="https://telegram.me/share/url?url=https://odessachill.online&amp;text=Ваш текст"
+                    target="_blank"><img src="../../../img/icons8-логотип-telegram-50.png" alt=""></a>
+                <span class="tooltip">Поділитись у Telegram</span>
+            </div>
+            <div class="social-share__link">
+                <a href="viber://forward?text=Ваш текст: https://odessachill.online" target="_blank"><img
+                        src="../../../img/icons8-viber-50.png" alt=""></a>
+                <span class="tooltip">Поділитись у Viber</span>
+            </div>
+        </div>
+    </div>
+</section>
     <section id="read_section">
     <div class="container">
         <div class="read">
