--- a/assets/index.html
+++ b/assets/index.html
@@ -46,9 +46,17 @@
     <header class="header">
         <div class="header_container">
             <div class="header__body">
-                <a class="header__logo" href="">
-                    <div>Odessa chill</div>
-                </a>
+                <div class="header__top">
+                    <a class="header__logo" href="">
+                        <div>Odessa chill</div>
+                    </a>
+                    <div class="header__search search-first">
+                        <form role="search" method="get" id="searchform" action="">
+                            <input type="text" value="" name="s" id="s" placeholder="Пошук по сайту" />
+                            <input type="submit" id="searchsubmit" value="Пошук" />
+                        </form>
+                    </div>
+                </div>
                 <div class="header__burger">
                     <span></span>
                 </div>
@@ -79,6 +87,13 @@
                     </ul>
                 </nav>
             </div>
+            <div class="header__search search-second">
+                <form role="search" method="get" id="searchform" action="">
+                    <input type="text" value="" name="s" id="s" placeholder="Пошук по сайту" />
+                    <input type="submit" id="searchsubmit" value="Пошук" />
+                </form>
+            </div>
+
         </div>
     </header>
     <section>
